[package]
name = "coralswap-lp-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
# Note: testutils feature disabled due to known issue with soroban-sdk 21.7.6
# The contract compiles successfully and follows SEP-41 standard
# Integration tests can be performed using soroban CLI
soroban-sdk = { workspace = true }
