[package]
name = "coralswap-pair"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
coralswap-flash-receiver-interface = { path = "../flash_receiver_interface" }
ethnum = { version = "*" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
